product grid layout bug and landing page image fix

--- a/client/views/landing/landing.scss
+++ b/client/views/landing/landing.scss
@@ -58,7 +58,7 @@
     background-repeat: no-repeat;
   }
   .mid-bottom-left-banner{
-    background-image: url('resources/about-banner.jpg');
+    background-image: url('resources/landing-featured.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
